I added a button that change the theme to dark mode. Pending to test all the page and fix bugs

--- a/custom_index.css
+++ b/custom_index.css
@@ -1,15 +1,14 @@
 body {
   margin: 0px;
   height: 100%;
-  
+
   --color_1: #2e4159;
   --color_2: #d1d1d4;
   --color_3: #e4e4e4;
   --color_4: #eeeeee;
 
- 
   background-color: var(--color_3);
-  font-family: 'Barlow Semi Condensed';
+  font-family: "Barlow Semi Condensed";
 }
 
 h1 {
@@ -28,7 +27,7 @@ h2 {
 }
 h3 {
   margin: 5vh 0 0 0;
-  
+
   font-size: 1.35vw;
   font-weight: bold;
 }
@@ -126,20 +125,19 @@ header div div div {
 
 #about_me p {
   background-color: var(--color_2);
-  padding: 0.3vw 1vw;
+  padding: 1.2vw 1vw;
   border-radius: 30px 0px;
 }
 #about_me h3 {
   background-color: var(--color_1);
-  color:var(--color_2);
+  color: var(--color_2);
   padding: 0.5vw 1vw;
   border-radius: 0px 30px;
 }
 #presentation {
   background-color: var(--color_2);
-  padding: 2vw 1vw;
+  padding: 2vw 2vw;
   border-radius: 30px 0px;
-  
 }
 #foto_formal img {
   width: 100%;
@@ -156,7 +154,7 @@ header div div div {
   display: flex;
   align-content: center;
   flex-direction: row;
-  
+
   padding: 0% 15%;
 }
 .sumary div {
@@ -164,13 +162,10 @@ header div div div {
   display: flex;
   flex: 1;
   flex-direction: column;
-  
-  
 }
 .sumary div div {
-  background-color: var(--color_2);  
+  background-color: var(--color_2);
   border-radius: 30px 0px;
-
 }
 
 .glyphicon.glyphicon-star {
@@ -182,14 +177,13 @@ header div div div {
   flex-direction: row;
   justify-content: center;
   padding: 3rem 3rem;
-  background-color: var(--color_2);  
+  background-color: var(--color_2);
   border-radius: 30px 0px;
   margin: 0vw 17.9vw;
 }
 .sumary_stars div {
   margin: 0rem 1rem;
   font-size: 1.1vw;
-  
 }
 .sumary_stars li {
   display: flex;
@@ -220,18 +214,63 @@ header div div div {
   visibility: visible;
 }
 
-#The_end{
+#The_end {
   margin-top: 5vh;
   height: 20vh;
   padding-top: 8vh;
   font-size: 2vh;
-  
+
   display: flex;
   align-content: center;
   justify-content: center;
   text-align: center;
   background-color: #262626;
   color: var(--color_2);
-
 }
 
+.label {
+  background-color: black;
+  display: flex;
+  height: 30px;
+  border-radius: 50px;
+  width: 100px;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 0 15px;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+  border: 2px solid black;
+}
+.label .fa-moon {
+  color: rgb(250, 250, 250);
+}
+label .fa-sun {
+  color: rgb(243, 188, 36);
+}
+.blob {
+  position: absolute;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  background: rgb(169, 241, 243);
+  border-radius: 50px;
+  transition: 0.5s ease all;
+}
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+.info {
+  display: block;
+  margin-top: 50px;
+}
+.info.night {
+  color: white;
+}
+.checkbox:checked + .label .blob {
+  left: 0;
+}
+.checkbox:checked + .label {
+  background-color: rgb(82, 81, 83);
+}
